fix more text wrap

--- a/src/components/Dialogs/FittingDialog/FittingDialogComponent.scss
+++ b/src/components/Dialogs/FittingDialog/FittingDialogComponent.scss
@@ -79,7 +79,6 @@
 
     .bp3-form-content {
         display: flex;
-        // flex-wrap: nowrap;
         width: 100%;
         user-select: none;
     }
@@ -122,6 +121,7 @@
         font-size: x-small;
         font-family: monospace;
         user-select: text;
+        white-space: nowrap;
     }
 
     .bp3-divider {
