--- a/src/components/Dialogs/PreferenceDialog/PreferenceDialogComponent.scss
+++ b/src/components/Dialogs/PreferenceDialog/PreferenceDialogComponent.scss
@@ -77,5 +77,9 @@
         }
     }
 
+    .bp3-control.bp3-inline {
+        white-space: nowrap;
+    }
+
     user-select: none !important;
 }
