--- a/src/components/PvGenerator/PvGeneratorComponent.scss
+++ b/src/components/PvGenerator/PvGeneratorComponent.scss
@@ -73,9 +73,10 @@
                 margin-right: 10px;
                 margin-bottom: 0px;
                 .bp3-label {
-                    margin: 0px;
+                    margin: 0 10px 0 0;
+                    min-width: 3em;
                     width: 3em;
-                    text-align: left;
+                    text-align: right;
                 }
             }
 
