--- a/src/components/SpatialProfiler/SpatialProfilerSettingsPanelComponent/SpatialProfilerSettingsPanelComponent.scss
+++ b/src/components/SpatialProfiler/SpatialProfilerSettingsPanelComponent/SpatialProfilerSettingsPanelComponent.scss
@@ -15,4 +15,8 @@
         width: 10em;
         text-align: right;
     }
+
+    .bp3-form-group .bp3-form-helper-text {
+        white-space: nowrap;
+    }
 }
